Freedom Sanbox Ant Deploy/src/objects/Calender__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This will store the all value of  months</description>
    <fields>
        <fullName>IsEndOfHalfYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEndOfHalfYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEndOfQuarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEndOfQuarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Month__c</fullName>
        <label>Name of Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Quarter__c</fullName>
        <label>Name of Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Year__c</fullName>
        <description>month belongs to 1st half of year or 2nd half.</description>
        <label>Part of Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Calender</label>
</CustomObject>